--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
         "vite": "^6.0"
     },
     "dependencies": {
-        "ckeditor5": "^44.1.0"
+        "@inertiajs/react": "^2.0.2",
+        "@vitejs/plugin-react": "^4.3.4",
+        "ckeditor5": "^44.1.0",
+        "react-dom": "^19.0.0"
     }
 }
