--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@inertiajs/react": "^2.0.2",
         "@vitejs/plugin-react": "^4.3.4",
         "ckeditor5": "^44.1.0",
-        "react-dom": "^19.0.0"
+        "react-dom": "^19.0.0",
+        "sweetalert2": "^11.15.10"
     }
 }
