feat: add role management page and CRUD

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dependencies": {
         "@inertiajs/react": "^2.0.2",
         "@vitejs/plugin-react": "^4.3.4",
+        "choices.js": "^11.0.3",
         "ckeditor5": "^44.1.0",
         "react-dom": "^19.0.0",
         "sweetalert2": "^11.15.10"
