--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
         "@vitejs/plugin-react": "^4.3.4",
         "choices.js": "^11.0.3",
         "ckeditor5": "^44.1.0",
+        "filepond": "^4.32.7",
+        "filepond-plugin-image-preview": "^4.6.12",
         "react-dom": "^19.0.0",
         "sweetalert2": "^11.15.10"
     }
