--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,14 @@
-APP_NAME=Laravel
+APP_NAME=CIMSA-Content-Management-System
 APP_ENV=local
-APP_KEY=
-APP_DEBUG=true
+APP_KEY=base64:9Fwj7ME+hoFvx8XM3SUuulHvupvLgSuo14tAeFWBACM=
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
+APP_MODE=dev
+APP_DEBUG=true
+DEBUGBAR_ENABLED =false
+
+FRONTEND_URL = // Insert Frontend URL
+BACKEND_URL = // Insert Backend URL
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -21,7 +26,7 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
+DB_CONNECTION=mysql
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
 # DB_DATABASE=cimsa_ulm
