--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@hcaptcha/react-hcaptcha": "^1.11.1",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
