--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-router": "^7.0.2",
-    "react-scroll-parallax": "^3.4.5"
+    "react-scroll-parallax": "^3.4.5",
+    "swr": "^2.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
