--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap": "^2.10.7",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-router": "^7.0.2",
     "react-scroll-parallax": "^3.4.5",
     "swr": "^2.3.0"
