--- a/docker.env
+++ b/docker.env
@@ -1,14 +1,14 @@
-APP_NAME=CIMSA-Content-Management-System
+APP_NAME=cimsa-ulm
 APP_ENV=local
-APP_KEY=base64:9Fwj7ME+hoFvx8XM3SUuulHvupvLgSuo14tAeFWBACM=
+APP_KEY=base64:RbldIkzsRWLymC3xK3p1lUymObjrB4GPD6E2PglIR4Y=
 APP_TIMEZONE=UTC
 APP_URL=http://localhost:8000
 APP_MODE=dev
-DEBUGBAR_ENABLED =false
-APP_DEBUG=false
+DEBUGBAR_ENABLED=true
+APP_DEBUG=true
 
-FRONTEND_URL = // Insert Frontend URL
-BACKEND_URL = // Insert Backend URL
+FRONTEND_URL = http://127.0.0.1:8010
+BACKEND_URL = http://127.0.0.1:8010
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -27,11 +27,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=cimsa_ulm
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_HOST=docker_db
+DB_PORT=3306
+DB_DATABASE=cimsa_ulm
+DB_USERNAME=root
+DB_PASSWORD=
 
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
