--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -13,6 +13,8 @@ server {
         fastcgi_pass app:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
     }
 
     location ~ /\.ht {
