--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,38 @@
-version: '3.8'
+# version: '3.8'
 
 services:
+  # application
   app:
     build: .
-    container_name: ${APP_NAME}
+    container_name: ${APP_NAME}-app
     restart: unless-stopped
-    working_dir: /var/www/html
+    working_dir: /var/www
     volumes:
-      - .:/var/www/html
+      - .:/var/www
     depends_on:
       - db
     networks:
-      - laravel
+      - cimsa
 
+  # web server
   web:
     image: nginx:latest
-    container_name: ${APP_NAME}_server
+    container_name: ${APP_NAME}-web
     restart: unless-stopped
     ports:
       - "8010:80"
     volumes:
-      - .:/var/www/html
+      - .:/var/www
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - app
     networks:
-      - laravel
+      - cimsa
 
+  # database
   db:
     image: mysql:8.0
-    container_name: docker_db
+    container_name: ${APP_NAME}-db
     restart: unless-stopped
     environment:
       MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
@@ -37,34 +40,34 @@ services:
       MYSQL_USER: ${DB_USERNAME}
       MYSQL_PASSWORD: ${DB_PASSWORD}
     ports:
-      - "3306:3306"
+      - "3307:3306"
     volumes:
       - db_data:/var/lib/mysql
     networks:
-      - laravel
+      - cimsa
 
   # phpMyAdmin
   phpmyadmin:
     image: phpmyadmin/phpmyadmin:latest
-    container_name: ${APP_NAME}_phpmyadmin
+    container_name: ${APP_NAME}-phpmyadmin
     ports:
-      - 8081:80
+      - "8081:80"
     depends_on:
       - db
     environment:
       MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
       MYSQL_USER: ${DB_USERNAME}
       MYSQL_PASSWORD: ${DB_PASSWORD}
-      PMA_HOST: docker_db
+      PMA_HOST: ${APP_NAME}-db
       MAX_EXECUTION_TIME: 3000
       MEMORY_LIMIT: 512M
       UPLOAD_LIMIT: 512M
     networks:
-      - laravel
+      - cimsa
 
 
 networks:
-  laravel:
+  cimsa:
 
 volumes:
   db_data:
