Update .env.example & README.md

--- a/.env.example
+++ b/.env.example
@@ -2,13 +2,22 @@ APP_NAME=CIMSA-Content-Management-System
 APP_ENV=local
 APP_KEY=base64:9Fwj7ME+hoFvx8XM3SUuulHvupvLgSuo14tAeFWBACM=
 APP_TIMEZONE=UTC
-APP_URL=http://localhost:8000
-APP_MODE=dev
 DEBUGBAR_ENABLED =false
 APP_DEBUG=false
 
-FRONTEND_URL = // Insert Frontend URL
-BACKEND_URL = // Insert Backend URL
+APP_MODE=prod
+
+APP_URL= # Insert CIMSA ULM URL (e.g. https://cimsa.ulm.ac.id)
+ASSET_URL="${APP_URL}"
+FRONTEND_URL ="${APP_URL}"
+BACKEND_URL ="${APP_URL}"
+
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=cimsa_ulm
+DB_USERNAME=root
+DB_PASSWORD=
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -25,13 +34,6 @@ LOG_CHANNEL=stack
 LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
-
-DB_CONNECTION=mysql
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=cimsa_ulm
-# DB_USERNAME=root
-# DB_PASSWORD=
 
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
