--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "choices.js": "^11.0.3",
         "ckeditor5": "^44.1.0",
         "filepond": "^4.32.7",
+        "filepond-plugin-file-validate-size": "^2.2.8",
+        "filepond-plugin-file-validate-type": "^1.2.9",
         "filepond-plugin-image-preview": "^4.6.12",
         "react-dom": "^19.0.0",
         "react-error-boundary": "^5.0.0",
